# TCC-CoMonArc

./: CMakeLists.txt  MakefileTests.mk  README.md  analyzeSymbols.py  analyze_build_avr.sh  analyze_build_esp32.sh  analyze_build_esp32_size.py  app.elf  fileSymbols.txt  firmware.map  platformio.ini  sdkconfig.app_esp32_bitbang  sdkconfig.app_esp32_uart  sdkconfig.defaults  sizes.txt
include/: Commands.h  (+3 more)
src/: BSP.cpp  CMakeLists.txt
src/ArduinoCore/: app.cpp  app_comonarc_logger.cpp  app_hello_world.cpp  app_logger_test.cpp  app_magnetometer_test.cpp  app_serial_test.cpp
src/ArduinoCore/Arduino_UART/: UART.cpp
src/ArduinoCore/BSP/ArduinoUno/: SystemConfig.cpp  TracePin.cpp
src/ArduinoCore/BSP/ESP32/: CS_ADC.cpp  GPIO_BSP.cpp  SystemConfig.cpp  TracePin.cpp
src/ArduinoCore/BitBang_UART/: bitbang_uart.cpp
src/ArduinoCore/BitBang_UART/BitBang_AVR_Micros/: bitbang_AVR_micros.cpp
src/ArduinoCore/BitBang_UART/BitBang_AVR_Timer2/: bitbang_uart.cpp
src/ArduinoCore/BitBang_UART/BitBang_ESP32/: bitbang_ESP32.cpp
src/ArduinoCore/Common/Commands/: Commands.cpp
src/ArduinoCore/Common/CurrentSensor/: CS_ADC.cpp
src/ArduinoCore/Common/GPIO_BSP/: GPIO_BSP.cpp
src/ArduinoCore/Programs/: app_QMC5883_Calibration.cpp  app_command_test.cpp  app_currentsensor_test.cpp  app_logger_bitbang_test.cpp  app_logger_test.cpp  app_magnetometer_test.cpp  app_timer_test.cpp  app_userinterface_test.cpp  app_yawcontroller_test.cpp
src/Magnetometer/: QMC5883L.c
src/TimeService/: SoftTimer.c  SystemClock.c
src/UserInterface/: UserInterface.c
src/Util/: CircularBuffer.c
(+99 files in other folders)
